--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src-cli/uSockets"]
-	path = src-cli/uSockets
+[submodule "src-server/uSockets"]
+	path = src-server/uSockets
 	url = https://github.com/enzo418/uSockets
