Added fallback ports to use if already using default

--- a/src-server/CMakeLists.txt
+++ b/src-server/CMakeLists.txt
@@ -1,4 +1,10 @@
+include(ExternalProject)
+
 MESSAGE(STATUS "Setting up DARKNET Server")
+
+set(DEPENDENCY_INSTALL_DIR ${PROJECT_BINARY_DIR}/install)
+set(DEPENDENCY_INCLUDE_DIR ${DEPENDENCY_INSTALL_DIR}/include)
+set(DEPENDENCY_LIB_DIR ${DEPENDENCY_INSTALL_DIR}/lib)
 
 # clangd:
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -50,3 +56,4 @@ ELSE ()
 		RUNTIME DESTINATION bin
 		)
 ENDIF ()
+
